# PatentPilot

./: .env  .gitignore  README.md  api.py  apiendpoint_explorer.py  hash_search.py  langgraph.json  main.py  patents_retreival.py  pyproject.toml  run.py  surechembl_openapi.json  test_cache.py  test_dummy_cache.py  test_patents_retreival.py  test_surechembl.py
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
analysis/: __init__.py  base_service.py  exceptions.py  report_service.py  schema.py  service.py
chains/: __init__.py  patent_analysis.py  report_generation.py
frontend/: README.md
frontend/app/: globals.css  layout.tsx  page.tsx
llm/: __init__.py  prompts.py  provider.py
logs/: debug_document_batch_response.json
patent_reduction/: __init__.py  config.py  example_usage.py  models.py
patent_reduction/pipeline/: __init__.py  patent_reduction_pipeline.py
patent_reduction/ranking/: __init__.py  patent_ranker.py
patent_reduction/reducers/: __init__.py  duplicate_reducer.py  family_reducer.py
patent_reduction/scoring/: __init__.py  chemical_score.py  claim_score.py  legal_score.py  recency_score.py  structural_score.py
patent_retrieval/: __init__.py  batch_fetcher.py  chunk_fetcher.py  config.py  enrichment_service.py  metadata_service.py  models.py  patent_enrichment.py  pipeline.py  polling_service.py  progress_tracker.py  results_service.py  search_service.py
workflows/: __init__.py  graph.py  nodes.py  state.py
(+28 files in other folders)
